--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
 <%
 =end%>
 
-<form type="POST" action="/users" accept-charset="UTF-8">
+<form type="post" action="/users" accept-charset="UTF-8">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
   <div>
     <label for="username">Username</label>
