--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,9 @@
   <%= @user.password %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<%
+=begin%>
+ <%= link_to 'Edit', edit_user_path(@user) %> | 
+<%
+=end%>
 <%= link_to 'Back', users_path %>
